--- a/flask_blog/templates/home.html
+++ b/flask_blog/templates/home.html
@@ -53,7 +53,7 @@
                         {{ form.password(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
-                <div class="form-group">
+<!--                 <div class="form-group">
                     {{ form.confirm_password.label(class="form-control-label") }}
                     {% if form.confirm_password.errors %}
                         {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
@@ -65,7 +65,7 @@
                     {% else %}
                         {{ form.confirm_password(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
+                </div> -->
                 <div class="form-group"> 
                     <span class="input-group-btn">
                     <span class="btn btn-primary btn-file">
