--- a/flask_blog/templates/about.html
+++ b/flask_blog/templates/about.html
@@ -2,7 +2,7 @@
     {% extends "layout.html" %}
     {% block content %}
         <h1>About Page</h1>
-        <br><p>This model has been prepared by Shivnagi Sharma</p></br>
+        <br><p>This model has been been prepared to predict COVID-19</p></br>
     {% endblock content%}
     </body>
     </html>
