--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -67,8 +67,8 @@
               <h3>Contact Us</h3>
               <p class='text-muted'>More Information about model
                 <ul class="list-group">
-                  <li class="list-group-item list-group-item-light">Suggestions</li>
-                  <li class="list-group-item list-group-item-light">Announcements</li>
+                  <li class="list-group-item list-group-item-light">shivangi77sharma@gmail.com</li>
+                  <li class="list-group-item list-group-item-light">maheshwarikunal8@gmail.com</li>
                   <li class="list-group-item list-group-item-light">Details</li>
                   <li class="list-group-item list-group-item-light">etc</li>
                 </ul>
